Allow changing themes + fix display issue when on small screens

--- a/css/main.css
+++ b/css/main.css
@@ -168,8 +168,3 @@ body {
 #navbarId input[type=button]{
 	width: 100%;
 }
-
-#toggleAddMenu{
-	width:100%;
-	font-size: 20;
-}
